--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,13 @@
     <string name="player_error">Error initializing YouTube player: %s</string>
     <string name="seek_to">Jump To</string>
     <string name="seek_to_hint">Seconds</string>
+    <string-array name="algorithm_sort_array">
+        <item>Bubble Sort</item>
+        <item>Merge Sort</item>
+        <item>Insert Sort</item>
+        <item>Selection Sort</item>
+        <item>Quick Sort</item>
+
+
+    </string-array>
 </resources>
