--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="seek_to">Jump To</string>
     <string name="seek_to_hint">Seconds</string>
     <string-array name="algorithm_sort_array">
+        <item>None</item>
         <item>Bubble Sort</item>
         <item>Merge Sort</item>
         <item>Insert Sort</item>
