--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,17 @@
 <resources>
     <string name="app_name">Congregate</string>
+
+    <!-- API -->
     <string name="media_name_youtube">Youtube</string>
     <string name="player_error">Error initializing YouTube player: %s</string>
     <string name="seek_to">Jump To</string>
     <string name="seek_to_hint">Seconds</string>
+
+
+    <!-- Menu and Drawers -->
+    <string name="menu_drawer_title">Drawer Menu</string>
+
+    <!-- Algorithms -->
     <string-array name="algorithm_sort_array">
         <item>None</item>
         <item>Bubble Sort</item>
