--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">Congregate</string>
 
+    <!-- Home Fragment -->
+    <string name="home_fragment_created_by">Created by Steven Zafrani</string>
+    <string name="home_fragment_intro">Select the tabs above to view other sections of this activity. The ActionBar menu button can take you to different activities to see algorithms and APIs in action.</string>
+    <string name="home_fragment_section_1">This app utilizes a few dependencies, such as:</string>
+    <string name="home_fragment_section_1_item_1">Android Support Library which provides additional material design options</string>
+
     <!-- API -->
     <string name="media_name_youtube">Youtube</string>
     <string name="player_error">Error initializing YouTube player: %s</string>
