added viewpager and naviagation drawer to api activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,12 @@
     <!-- Home Fragment -->
     <string name="home_fragment_created_by">Created by Steven Zafrani</string>
     <string name="home_fragment_intro">Select the tabs above to view other sections of this activity. The ActionBar menu button can take you to different activities to see algorithms and APIs in action.</string>
-    <string name="home_fragment_section_1">This app utilizes a few dependencies, such as:</string>
+    <string name="home_fragment_section_1">This app utilizes a few dependencies/frameworks</string>
     <string name="home_fragment_section_1_item_1">Android Support Library which provides additional material design options</string>
+    <string name="home_fragment_section_1_item_2">Youtube API integration allowing user to view videos and data</string>
+    <string name="home_fragment_section_1_item_3">Algorithm classes that visually demonstrate various sort and search processes</string>
+    <string name="home_fragment_section_1_item_4">Picasso for quickly loading web image resources</string>
+
 
     <!-- API -->
     <string name="media_name_youtube">Youtube</string>
