fixes to searchfragment, colors and string xml files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,13 @@
         <item>Quick Sort</item>
 
     </string-array>
+    <string-array name="algorithm_search_array">
+        <item>None</item>
+        <item>Linear Search</item>
+        <item>Binary Search</item>
+        <item>Tree Search</item>
+        <item>Genetic Search</item>
+    </string-array>
 
 
     <string name="description_bubble_sort">Average and worst case complexity of bubble sort is O(n2). Also, it makes O(n2) swaps in the worst case. Bubble sort is adaptive. It means that for almost sorted array it gives O(n) estimation. Avoid implementations, which don\'t check if the array is already sorted on every step (any swaps made). This check is necessary, in order to preserve adaptive property.</string>
